[#14111] Convert GlobalMarshaller to use Protostream
[#13733] Migrate server PersistenceContextInitializers to GlobalContextInitializer

- All commands and internal classes now marshallable with Protostream

- ModuleCommandExtensions removed with no direct replacement as
  additional commands should be registered via a Protostream
  SerializationContextInitializer

- Marshallable* wrapper classes added to abstract handling of
  configurable user marshallers

- Deprecated AdvancedExternalizer and Externalizer interfaces moved to
  tools as still required by the StoreMigrator

- Old Externalizer implementations for persisted classes moved to tools
  and simplified so that old stores can still be migrated.

- @SerializeWith and @SerializeFunctionWith removed

- Parser ignores Externalizer configuration for older schemas

- Remove ProtoStreamTypeIds#SUBJECT as it was never used by the
  SubjectAdapter which utilises `@ProtoName` instead of `@ProtoTypeId`

- Remove `GlobMatchFilterConverter` and `RespTypeFilterConverter` from
  PersistenceContextInitializer as never persisted